# ergodic-case

./: README.md
backend/: Makefile  main.py  pyproject.toml
backend/data/: kg.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
