[tool.poetry]
name = "case"
version = "0.1.0"
description = ""
authors = ["Matheus Afonso <matheusafonsouza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
networkx = {extras = ["default"], version = "^3.3"}
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
